--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'  # Change this to your AWS region
+          aws-region: 'ap-south-1'  # Change this to your AWS region
+      
+      - name: print current directory
+        run: pwd
+        
+      - name: list files
+        run: ls -R
+        
+      - name: verfiy directory
+        run: find . -type d
  
       # Upload to S3
       - name: Upload to S3
