--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,36 @@
-name: Deploy to AWS
+name: Upload Website to S3 and Invalidate CloudFront
  
 on:
   push:
     branches:
-      - main  # Triggers on push to the main branch
+      - master  # Runs when code is pushed to master branch
  
 jobs:
   deploy:
     runs-on: ubuntu-latest
  
     steps:
-      # Checkout the code
+      # 1. Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v2
  
-      # Set up AWS CLI
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
+      # 2. Upload to S3
+      - name: Sync files to S3
+        uses: jakejarvis/s3-sync-action@master
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'ap-south-1'  # Change this to your AWS region
-      
-      - name: print current directory
-        run: pwd
-        
-      - name: list files
-        run: ls -R
-        
-      - name: verfiy directory
-        run: find . -type d
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-south-1  # Mumbai Region
+          SOURCE_DIR: 'public'  # Change this to your actual folder containing index.html
  
-      # Upload to S3
-      - name: Upload to S3
-        run: |
-          aws s3 sync ./my-build/ s3://my-github1-bucket/ --delete
-          
-      # Invalidate CloudFront cache
+      # 3. Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
         run: |
-          aws cloudfront create-invalidation --distribution-id E3G6480IK0RPB2 --paths "/*"
- 
-       
-
-
-
-          
+          aws cloudfront create-invalidation --distribution-id E3G6480IK0RPB2  --paths "/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-south-1
