--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-south-1  # Mumbai Region
-          SOURCE_DIR: 'public'  # Change this to your actual folder containing index.html
+          SOURCE_DIR: './'  # Change this to your actual folder containing index.html
  
       # 3. Invalidate CloudFront caches
       - name: Invalidate CloudFront cache
